fix long word overflow bug

--- a/src/components/Note/Note.module.css
+++ b/src/components/Note/Note.module.css
@@ -10,6 +10,7 @@
 
 .content {
   line-height: 1.5;
+  overflow-wrap: anywhere;
 }
 
 .date {
